welcome.lessons.welcome.bat.bool1.LoneTeen.scala.error
loneTeen:1: error: not a legal formal parameter.
Note: Tuples cannot be directly destructured in method or function parameters.
      Either create a single parameter accepting the Tuple1,
      or consider a pattern matching anonymous function: `{ case (param1, param1) => ... }
def loneTeen(a:Int, b:Int):Boolean = {if ((a <= 19 && a >=13 && (b < 13 || b > 19 )) || (b <= 19 && b =>13  && (a < 13 || a > 19 )))
                                                                                                 ^